--- a/GUI/ReadMe
+++ b/GUI/ReadMe
@@ -9,3 +9,6 @@ QuickSDL save me hell lot of time.
 
 Thus using this should allow me create the GUI easy without any hassle.
 
+
+
+Had to zip the file....
